<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_participants"
        android:icon="@mipmap/ic_participants"
        android:title="@string/participants" />


    <item
        android:id="@+id/menu_about_alcala_halloween"
        android:icon="@mipmap/ic_map"
        android:title="@string/alcala_halloween" />

    <item
        android:id="@+id/menu_about_marcha_zombie"
        android:icon="@mipmap/ic_book_poem"
        android:title="@string/marcha_zombie" />

    <item
        android:id="@+id/menu_contest_decor"
        android:icon="@mipmap/ic_contest"
        android:title="@string/contest_decoration" />

    <item android:title="@string/contact_and_social">
        <menu>
            <item
                android:id="@+id/menu_twitter_halloween_alcala_17"
                android:icon="@mipmap/ic_nav_twitter"
                android:title="@string/hashtag_alcalahalloween" />

            <item
                android:id="@+id/menu_twitter_7mz"
                android:icon="@mipmap/ic_nav_twitter"
                android:title="@string/hashtag_7mz" />
        </menu>
    </item>
</menu>
