<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_agenda"
        android:icon="@mipmap/ic_agenda"
        android:title="@string/agenda" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@mipmap/ic_map"
        android:title="@string/map" />

    <item
        android:id="@+id/navigation_zombiselfie"
        android:icon="@mipmap/ic_zombiselfie"
        android:title="@string/zombiecuadro"
        android:visible="true"/>

    <item
        android:id="@+id/navigation_poems"
        android:icon="@mipmap/ic_nav_poem"
        android:title="@string/poems" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@mipmap/ic_news"
        android:title="@string/news" />

</menu>
