<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="org.halloweenalcala.app.ui.slogan_contest.SloganContestFragment">

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs_contest"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@android:color/transparent"
        app:tabMode="fixed"
        app:tabGravity="fill"
        app:tabSelectedTextColor="@color/red_halloween_light"
        app:tabIndicatorColor="@color/red_halloween_light"
        app:tabTextColor="@color/white">

        <android.support.design.widget.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/voting"/>

        <android.support.design.widget.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ranking"/>

        <android.support.design.widget.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_excl"/>

        <!--<android.support.design.widget.TabItem-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/your_slogans"/>-->

    </android.support.design.widget.TabLayout>

    <FrameLayout
        android:id="@+id/frame_contest"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
