<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_margin="5dp"
    android:gravity="center_vertical"
    android:background="@color/white_semitransp"
    android:padding="5dp">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_slogan_text"
        style="@style/TextBase"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="16sp"
        android:padding="15dp"
        android:maxHeight="150dp"
        app:autoSizeTextType="uniform"
        app:fontFamily="@font/nosifer" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_validate_slogan"
            style="@style/ButtonHalloween"
            android:text="@string/is_valid"
            android:textColor="@color/black"
            app:backgroundTint="@color/green_2018"/>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_delete_slogan"
            style="@style/ButtonHalloween"
            app:backgroundTint="@color/red_halloween_light"
            android:text="@string/delete"
            android:layout_marginTop="20dp"/>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_ban_user"
            style="@style/ButtonHalloween"
            android:text="@string/ban_user"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</LinearLayout>