<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/img_app_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tv_title_splash"
                style="@style/TextBase"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:text="@string/app_name"
                app:fontPath="fonts/ZombieQueen.ttf"
                android:textColor="@color/red_halloween"
                android:textSize="38sp" />

            <View
                android:id="@+id/view_eyes_anim"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_alignTop="@id/img_roman_zombie"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/img_roman_zombie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title_splash"
                android:adjustViewBounds="true"
                android:src="@mipmap/img_zombie_protest_no_eyes" />


            <TextView
                android:id="@+id/tv_splash_message"
                style="@style/TextBase"
                android:layout_below="@+id/img_roman_zombie"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:text="@string/splash_message"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btn_update_app_splash"
                style="@style/ButtonHalloween"
                android:layout_below="@+id/tv_splash_message"
                android:layout_centerHorizontal="true"
                android:text="@string/update"
                android:visibility="gone"/>


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
